WebUI: fix off-center window button.

--- a/src/web-ui/styles/fullscreenButton.styl
+++ b/src/web-ui/styles/fullscreenButton.styl
@@ -7,4 +7,4 @@
 		.fullscreen
 			display none
 		.window
-			display initial
+			display block
